<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Log.LogFragment"
    android:paddingTop="20dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <LinearLayout
        android:id="@+id/logHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_title"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/logRiskWeekCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_riskPlaceholder"
                    android:textColor="@color/red"
                    android:textSize="36sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_countRiskWeek" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/logRiskMonthCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_riskPlaceholder"
                    android:textColor="@color/red"
                    android:textSize="36sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_countRiskMonth" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/logRiskYearCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_riskPlaceholder"
                    android:textColor="@color/red"
                    android:textSize="36sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_countRiskYear" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/logRiskAllTimeCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_riskPlaceholder"
                    android:textColor="@color/red"
                    android:textSize="36sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_countRiskAllTime" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/logHeader"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="start">
        <Spinner
            android:id="@+id/logSpinnerDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"/>
        <EditText
            android:id="@+id/logDayET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:hint="@string/log_dayETHint"
            android:inputType="number"
            android:maxLength="2"/>
        <EditText
            android:id="@+id/logMonthET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:hint="@string/log_monthETHint"
            android:inputType="number"
            android:maxLength="2"/>
        <EditText
            android:id="@+id/logYearET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:hint="@string/log_yearETHint"
            android:inputType="number"
            android:maxLength="4"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/logSearchBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:backgroundTint="@color/white"
            android:text="@string/logSearchBtn"
            android:textColor="@color/black"
            app:cornerRadius="8dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/grey"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <ListView
        android:id="@+id/logListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/logFilter"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>