<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisclaimerActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_foreground_1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/disclaimer_title"
            android:textSize="32sp"
            android:textColor="@color/red"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/disclaimer_desc"
            android:textSize="18sp"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/disclaimerNOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:text="@string/disclaimer_btn_disagree"
                android:backgroundTint="@color/red"
                app:strokeWidth="1dp"
                app:strokeColor="@color/grey"
                app:cornerRadius="8dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/disclaimerOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disclaimer_btn_agree"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                app:strokeWidth="1dp"
                app:strokeColor="@color/grey"
                app:cornerRadius="8dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>